TEST_PROGRAMS/INVALID/yanis_hattab/invalid2.min
var s : string;



s = "yani$";
